--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+src/views/Votacion/votacion rodrigo prueba.tsx
+src/views/Votacion/votacion rodrigo prueba.txt
+src/views/Votacion/votacion rodrigo prueba.txt
 package-lock.json
 /routes/movies-service.js
